// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ICON test Icon 1`] = `
<div>
  <span
    height="16"
    viewbox="0 0 24 24"
    width="16"
  />
</div>
`;

exports[`ICON test Icon 2`] = `
<div>
  <span
    height="22"
    viewbox="0 0 24 24"
    width="22"
  />
</div>
`;
